[package]
name = "unique-files"
version = "0.1.0"
authors = ["Nico <crop.nicolas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.2"
log = "0.4"
colored = "2"
chrono = "0.4"
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"

[build-dependencies]
qt_ritual_build = "0.5.0"